// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
  padding: 0.5rem;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
}

.emotion-4:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-disabled="false"]:hover,
.emotion-4 [data-disabled="false"]:focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-4:focus-within {
  border-color: #792dd4;
}

.emotion-4[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-4[data-size='medium'] {
  height: 2.5rem;
}

.emotion-4[data-size='large'] {
  height: 3rem;
}

.emotion-4[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-4[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-4[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-4[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):hover {
  border-color: #92103f;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-10 {
  border: none;
  outline: none;
  background: transparent;
  font-size: 0.875rem;
  width: 1.5625rem;
  height: 1.5rem;
  text-align: center;
  border-radius: 0.25rem;
  color: #3f4250;
  caret-color: transparent;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10:not(:disabled):hover {
  background-color: #e9eaeb;
  color: #727683;
}

.emotion-10:not(:disabled):active,
.emotion-10:not(:disabled):focus {
  background-color: #e9eaeb;
  color: #3f4250;
}

.emotion-10:-moz-read-only {
  cursor: default;
}

.emotion-10:read-only {
  cursor: default;
}

.emotion-10:disabled {
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-10[data-period="true"] {
  color: #727683;
}

.emotion-10[data-period="true"][data-size="large"] {
  width: calc(1.5625rem + 0.125rem);
}

.emotion-10::-moz-selection {
  background: none;
}

.emotion-10::selection {
  background: none;
}

.emotion-12 {
  padding-inline: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="emotion-4 emotion-5"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <div
              class="emotion-6 emotion-1"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-10 emotion-11"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-12 emotion-13 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="emotion-6 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-10 emotion-11"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-12 emotion-13 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="emotion-6 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-10 emotion-11"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
  padding: 0.5rem;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
}

.emotion-4:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-disabled="false"]:hover,
.emotion-4 [data-disabled="false"]:focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-4:focus-within {
  border-color: #792dd4;
}

.emotion-4[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-4[data-size='medium'] {
  height: 2.5rem;
}

.emotion-4[data-size='large'] {
  height: 3rem;
}

.emotion-4[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-4[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-4[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-4[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):hover {
  border-color: #92103f;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-10 {
  border: none;
  outline: none;
  background: transparent;
  font-size: 0.875rem;
  width: 1.5625rem;
  height: 1.5rem;
  text-align: center;
  border-radius: 0.25rem;
  color: #3f4250;
  caret-color: transparent;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10:not(:disabled):hover {
  background-color: #e9eaeb;
  color: #727683;
}

.emotion-10:not(:disabled):active,
.emotion-10:not(:disabled):focus {
  background-color: #e9eaeb;
  color: #3f4250;
}

.emotion-10:-moz-read-only {
  cursor: default;
}

.emotion-10:read-only {
  cursor: default;
}

.emotion-10:disabled {
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-10[data-period="true"] {
  color: #727683;
}

.emotion-10[data-period="true"][data-size="large"] {
  width: calc(1.5625rem + 0.125rem);
}

.emotion-10::-moz-selection {
  background: none;
}

.emotion-10::selection {
  background: none;
}

.emotion-12 {
  padding-inline: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r4»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="emotion-4 emotion-5"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <div
              class="emotion-6 emotion-1"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-10 emotion-11"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-12 emotion-13 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="emotion-6 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-10 emotion-11"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-12 emotion-13 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="emotion-6 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-10 emotion-11"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
